# NeuralQuant

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_semantic_new.json  .graphify_uncached.txt  CUserspointprojectsstockpredictorpara_tcs_raw.txt  PROPRIETARY-LICENSE.txt  README.md  deep_test_live.py  deep_test_live_v2.py  deep_test_live_v3.py  deep_test_results.json  deep_test_results_v2.json  deep_test_v4.py  docker-compose.yml  linkedin_company_post.txt  pyproject.toml  render.yaml  response.json  smoke_report.json  start-openbb.bat  trade_daemon.py  vercel.json
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/migrations/: 004_alerts.sql  006_team_hub.sql  007_conversations.sql  008_roe_fcf_columns.sql  009_enrichment_cache.sql  010_score_cache_history.sql  020_enable_rls.sql  021_security_events.sql
apps/api/src/: deep_test_e2e.py
apps/api/src/nq_api/: alert_checker.py  config.py  dart_router.py  data_builder.py  db_columns.py  db_migrate.py  deps.py  logging_redaction.py  main.py  notify.py  paypal.py  schemas.py  schemas_alerts.py  schemas_watchlist.py  score_builder.py  sector_rank.py  session_analysis.py  timeouts.py  universe.py  validation.py
apps/api/src/nq_api/agents/: adversarial.py  anjali_context.py  base.py  fundamental.py  geopolitical.py  head_analyst.py  macro.py  orchestrator.py  sentiment.py  technical.py
apps/api/src/nq_api/auth/: __init__.py  abuse_limit.py  deps.py  jwt_verify.py  models.py  rate_limit.py  security_audit.py
apps/api/src/nq_api/cache/: __init__.py  quantfactor_cache.py  score_cache.py  snapshot_cache.py
apps/api/src/nq_api/jobs/: __init__.py  market_refresh.py  nightly_anjali.py  nightly_score.py  quantfactor_sync.py
apps/api/src/nq_api/routes/: alerts.py  analyst.py  analytics.py  analytics_track.py  astra_portfolio.py  auth.py  auth_webhook.py  backtest.py  broker.py  checkout.py  checkout_stripe.py  cron.py  hermes.py  live.py  live_dashboard.py  livekit_token.py  market.py  market_wrap.py  migrate.py  mobile.py  newsdesk.py  query.py  referrals.py  screener.py  sentiment.py  session.py  share.py  smart_money.py  stocks.py  team.py  terminal.py  trade.py  (+4 more)
apps/api/tests/: conftest.py  test_agents.py  test_analyst_route.py  test_analytics_admin_gate.py  test_auth_jwt.py  test_clarification.py  test_db_columns.py  test_health.py  test_live_price.py  test_livekit_token.py  test_livekit_token_briefing.py  test_logging_redaction.py  test_market_branching.py  test_nan_middleware.py  test_orchestrator.py  test_quantfactor_india.py  test_screener_route.py  test_smoke_bypass.py  test_snapshot_price.py  test_stocks_route.py
apps/livekit-agent/: pyproject.toml
apps/livekit-agent/src/quantastra/: __init__.py  agent.py  context.py  dispatcher.py  multilingual_tts.py  persona.py  veronica_agent.py  veronica_logic.py  veronica_persona.py
apps/livekit-agent/tests/: test_veronica_logic.py
(+419 files in other folders)
