[project]
name = "nq-api"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "nq-data",
    "nq-signals",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nq_api"]

[tool.uv.sources]
nq-data = { workspace = true }
nq-signals = { workspace = true }
