[project]
name = "nq-api"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "anthropic>=0.117.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.13.0",
    "supabase>=2.31.0",
    "vaderSentiment>=3.3.2",
    "resend>=2.34.0",
    "nq-data",
    "nq-signals",
    "slack-bolt>=1.30.0",
    "slack-sdk>=3.43.0",
    "psycopg2-binary>=2.9.12",
    "livekit>=1.1.13",
    "stripe>=15.3.1",
    "boto3>=1.43.51",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
test = ["pytest>=9.1.1", "httpx>=0.28.1", "pytest-asyncio>=1.4.0"]

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nq_api"]

[tool.uv.sources]
nq-data = { workspace = true }
nq-signals = { workspace = true }
