[project]
name = "quantastra-agent"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents>=1.4.0",
    "livekit-plugins-deepgram>=1.4",
    "livekit-plugins-anthropic>=1.4",
    "livekit-plugins-elevenlabs>=1.4",
    "livekit>=1.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "nq-data",
    "nq-signals",
    "pandas>=2.0",
    "yfinance>=0.2.40",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantastra"]

[tool.uv.sources]
nq-data = { workspace = true }
nq-signals = { workspace = true }
